add new consultation request
